--- a/style.css
+++ b/style.css
@@ -149,6 +149,13 @@ img { max-width: 300px;
 }
 
 
+.flower {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
 
 
